// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography test suite: bottomSpacing 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-397282-MuiTypography-root"
  data-cy="typography"
>
  Text
</p>
`;

exports[`Typography test suite: dataCy 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-5wwosz-MuiTypography-root"
  data-cy="custom"
>
  Text
</p>
`;

exports[`Typography test suite: default 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-5wwosz-MuiTypography-root"
  data-cy="typography"
>
  Text
</p>
`;

exports[`Typography test suite: display 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-1sx1eu0-MuiTypography-root"
  data-cy="typography"
>
  Text
</p>
`;

exports[`Typography test suite: loading 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-5wwosz-MuiTypography-root"
  data-cy="typography-loading"
>
  <span
    className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1e1x4vv-MuiSkeleton-root"
    style={
      {
        "height": undefined,
        "width": undefined,
      }
    }
  />
</p>
`;

exports[`Typography test suite: localized 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 css-5wwosz-MuiTypography-root"
  data-cy="typography"
>
  Text
</p>
`;

exports[`Typography test suite: truncated 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1 MuiTypography-noWrap css-1m2dqj2-MuiTypography-root"
  data-cy="typography"
>
  Text
</p>
`;

exports[`Typography test suite: variant 1`] = `
<h2
  className="MuiTypography-root MuiTypography-h6 css-tho60i-MuiTypography-root"
  data-cy="typography"
>
  Text
</h2>
`;
